--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -540,7 +540,7 @@ Thanks to these definitions we can express the excitation operators as follows:
 \op E = \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, \qq
 \op {\tilde E} = \sum_p \left( \ket{\psi_p} \tbra{\phi^E_p} + \tket{\chi^E_p}\bra{\psi_p} \right)\;.
 \ee
-The operator eigenvalue equations \eqref{opEeigenvalueDef1} and \eqref{optildeEeigenvalueDef1} can be translated in Schroedinger-like equations
+The operator eigenvalue equations \eqref{opEeigenvalueDef1} and \eqref{optildeEeigenvalueDef1} can be translated into a Schroedinger-like equations
 for the excitonic states. 
 
 \vspace{0.5cm}
