--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -535,7 +535,7 @@ can be easily proved.
 
 We introduce the \emph{excitonic states} defined via the linear combination of the basis set orthogonal to $\dmnot$ with the
 coefficients that appears in \eqref{XYcoeffDef1}, that is:
-\begin{align}
+\begin{align}\lb{ExcitonicStatesDef1}
 \ket{\phi^E_p} &\equiv \sint \dd \alpha X_{E}^{p \alpha} \ket{\psi(\alpha)} &
 \tbra{\phi^E_p} &\equiv \sint \dd \alpha {\tilde X_{E}^{p \alpha}} \bra{\psi(\alpha)} \;, \nn\\
 \bra{\chi^E_p} &\equiv \sint \dd \alpha  Y_{E}^{p \alpha} \bra{\psi(\alpha)} &
@@ -552,7 +552,6 @@ for the excitonic states.
 \vspace{0.5cm}
 \emph{Equations for $\coupl = 0$}
 \vspace{0.5cm}
-
 
 \noindent In this case the $\optr{L}_{q\beta}^{p\alpha}$ matrix has only diagonal non-vanishing elements, given by: 
 \be
@@ -642,16 +641,26 @@ U\left[\commutator{\dmnot}{\op O};\ketbra{\r'}{\r}\right]\ketbra{\r}{\r'} \;.
 \ee
 This formalism allows us to provide a compact expression for the action of the Liouville superoperator on the excitation operators. For the left action we have:
 \begin{align}
-\Liouv\op E &= \sum_p\left(\hnot-\eps_p\right)\ketbra{\phi_p}{\psi_p} - \sum_p\ket{\psi_p} \bra{\chi^E_p}\left(\hnot-\eps_p\right) + \nn \\
+\Liouv\op E &= \sum_p\left(\hnot-\eps_p\right)\ketbra{\phi^E_p}{\psi_p} - \sum_p\ketbra{\psi_p}{\chi^E_p}\left(\hnot-\eps_p\right) + \nn \\
 &+ \sum_p \sint \dd\alpha  U[\decay{\alpha}{p}; \op E] \ketbra{\psi(\alpha)}{\psi_p}
-- \sum_p \sint \dd\alpha U[\excite{p}{\alpha}; \op E] \ketbra{\psi_p}{\psi(\alpha)} = E\op E \;,
+- \sum_p \sint \dd\alpha U[\excite{p}{\alpha}; \op E] \ketbra{\psi_p}{\psi(\alpha)} = E\op E \;, \nn
 \end{align}
 where the action of the coupling superoperator on $\op E$ has been computed imposing its expansion in the transition basis and computing the coefficients with formula 
 \eqref{leftActionCouplingDef1}. Projecting out the previous equation by multiplication with an occupied eigenstates from both the left and right provides the equations:
-\begin{align}
-\left(\hnot-\eps_p\right)\ket{\phi_p} +\sint \dd\alpha  U[\decay{\alpha}{p}; \op E] \ket{\psi(\alpha)} &= E\ket{\phi_p} \nn \\
-\bra{\chi_p}\left(\hnot-\eps_p\right) +\sint \dd\alpha \bra{\psi(\alpha)} U[\excite{p}{\alpha}; \op E] &= -E\bra{\chi_p} 
+\begin{align}\lb{PhipChipEqDef1}
+\left(\hnot-\eps_p\right)\ket{\phi^E_p} +\sint \dd\alpha  U[\decay{\alpha}{p}; \op E] \ket{\psi(\alpha)} &= E\ket{\phi^E_p} \;,\nn \\
+\bra{\chi^E_p}\left(\hnot-\eps_p\right) +\sint \dd\alpha \bra{\psi(\alpha)} U[\excite{p}{\alpha}; \op E] &= -E\bra{\chi^E_p} \;.
 \end{align}
+We observe that the coupling kernel behaves as a (non-local) potential that depends on both the $X_{E}^{p \alpha}$ and $Y_{E}^{p \alpha}$ coefficients of \eqref{ExcitonicStatesDef1}
+thus introducing a coupling between the $\phi$ and $\chi$ states. 
+
+In the same way the right action provides:
+\begin{align}
+\op{\tilde E}\Liouv &= \sum_p\tketbra{\psi_p}{\phi^E_p}\left(\hnot-\eps_p\right) - \sum_p\left(\hnot-\eps_p\right)\tketbra{\chi^E_p}{\psi^E_p} + \nn \\
+&+ \sum_p \sint \dd\alpha  U[\commutator{\dmnot}{\op{\tilde E}};\decay{\alpha}{p}] \ketbra{\psi(\alpha)}{\psi_p}
++ \sum_p \sint \dd\alpha U[\commutator{\dmnot}{\op{\tilde E}};\excite{p}{\alpha}] \ketbra{\psi_p}{\psi(\alpha)} = E\op{\tilde E} \;, \nn
+\end{align}
+
 
 
 \section{Draft of the paper - old notes}
