--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -159,7 +159,7 @@ their shape is dependent on the treatment
 In this way they might be expressed in terms of resonant wavefunctions
 \end{itemize}
 
-\section{THEORY}
+\section{GENERAL THEORETICAL SETUP}
 
 \subsection{Basic definitions}\lb{BasicDef}
 
@@ -359,6 +359,8 @@ Liouville equation in $\omega$ space can be written as:
 \be\lb{LiouvillianRhopomegaDef3}
 \left(\bbomega - \Liouv\right) \dm'(\omega) =  \commutator{\op\Phi(\omega)}{\dmnot}\;.
 \ee
+
+\section{Critical Analysis of the linear response results}
 
 \subsection{Localization properties of the response density}
 
